# libsql_dart

./: CHANGELOG.md  pubspec.yaml
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: connection.dart  libsql.dart  statement.dart  transaction.dart
lib/src/rust/utils/: params.dart  result.dart  return_value.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: connection.rs  libsql.rs  statement.rs  transaction.rs
rust/src/utils/: helpers.rs  params.rs
