[package]
name = "libsql_dart"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = {version = "=2.9.0", features = ["log"] }
hyper-rustls = { version = "0.25", features = ["webpki-tokio", "rustls-native-certs", "ring"], default-features = false }
libsql = {path = "../../libsql/libsql"}
log = "0.4.27"
tokio = "1.39"
uuid = "1.10"
webpki-roots = "0.26.8"

[dev-dependencies]
tempdir = "0.3.7"
